<resources>
    <string name="app_name">BloodBank</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="Sing_in">Sing in</string>
    <string name="dont_have_account">don\'t have account ? you can register from her</string>
    <string name="code">code</string>
    <string name="new_Password">new Password</string>
    <string name="confirm_Password">confirm Password</string>
    <string name="ok">ok</string>
    <string name="phone_number">phone number</string>
    <string name="send">send</string>
    <string name="create_new_account">create new account</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="birthday">birthday</string>
    <string name="last_data_donation">last data donation</string>
    <string name="Sing_up">Sign up</string>
    <string name="nointernt">please connect the internet</string>
    <string name="empty">Failde is Required</string>
    <string name="failed">Failed !</string>
    <string name="password_not_equal">password not equal</string>
    <string name="check_your_phone">check your phone</string>
    <string name="selectcity">please select your city</string>
    <string name="selectgover">please select your governorat</string>
    <string name="selectbloodtype">please select your blood type</string>
    <string name="city">City</string>
    <string name="governorat">Governorate</string>
    <string name="bloodtype">Boold Type</string>
    <string name="created_new_account">created new account</string>
    <string name="notification">notification</string>
    <string name="No_Item">No Items</string>
    <string name="edit_profile">edit profile</string>
    <string name="change">change</string>
    <string name="age">age</string>
    <string name="call">Call</string>
    <string name="bags_number">Bags number</string>
    <string name="address">Address</string>
    <string name="hospital">hospital</string>
    <string name="phone">phone</string>
    <string name="articles">articles</string>
    <string name="donation_request">donation request</string>
    <string name="NO_Result">NO Result</string>
    <string name="categories">categories</string>
    <string name="Favorite">Favorite</string>
    <string name="added_to_favourite">item is added to favourite</string>
    <string name="removed_from_favourite">item is removed from favourite</string>
    <string name="about_app">about app</string>
    <string name="more">more</string>
    <string name="connect_us">connect us</string>
    <string name="setting_notification">setting notification</string>
    <string name="exit">exit</string>
    <string name="title">title</string>
    <string name="Sava">Sava</string>
    <string name="Notification_Setting">Notification Setting</string>
    <string name="patientname">patient name</string>
    <string name="request_donation">"request donation "</string>
    <string name="lang">eg</string>
    <string name="slider">homeeeeeeeee</string>
    <string name="slider1">uiverepoiuevrhuqreuipqehfcuiih</string>
    <string name="slider2">uifcpiueubcenun</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_location">select location</string>

</resources>
