<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/d8">

            <ImageView
                android:id="@+id/login_fragment_img_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/login_fragment_et_phone"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/d50"
                app:srcCompat="@drawable/loginpic" />


            <EditText
                android:id="@+id/login_fragment_et_phone"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/Phone" />

            <EditText
                android:id="@+id/login_fragment_et_password"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_fragment_et_phone"
                android:hint="@string/Password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />


            <LinearLayout
                android:id="@+id/login_fragment_lnlay_remember_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_fragment_et_password"
                android:layout_margin="@dimen/d8"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/login_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remember_me"
                    android:textColor="@color/white" />


                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/login_txt_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forget_Password"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_fragment_lnlay_remember_forget"
                android:layout_margin="@dimen/d8"
                android:gravity="center">

                <Button
                    android:id="@+id/login_bt_sing_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shap"
                    android:text="@string/Sing_in" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_txt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/registerbackgroundtxt"
                android:text="@string/dont_have_account"
                android:textAlignment="center"
                android:textColor="@color/rednoti" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>