<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:padding="@dimen/d8">

        <ImageView
            android:id="@+id/forget_pas1_fragment_img_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/forget_pass1_fragment_et_code"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/d50"
            app:srcCompat="@drawable/loginpic" />

        <EditText
            android:id="@+id/forget_pass1_fragment_et_code"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/code" />

        <EditText
            android:id="@+id/forget_pass1_fragment_et_password"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_pass1_fragment_et_code"
            android:hint="@string/new_Password"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/forget_pass1_fragment_et_confirm_password"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_pass1_fragment_et_password"
            android:hint="@string/confirm_Password"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_pass1_fragment_et_confirm_password"
            android:layout_margin="@dimen/d8"
            android:gravity="center">

            <Button

                android:id="@+id/forget_pass1_bt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shap"
                android:text="@string/ok" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>