<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/d14"
            android:orientation="vertical">

            <TextView
                style="@style/text_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone" />

            <ImageView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/connect_us_fragment_im_phone"
                    android:layout_width="@dimen/d50"
                    android:layout_height="@dimen/d50"
                    android:layout_marginStart="@dimen/d8"
                    android:padding="@dimen/d4"
                    android:src="@drawable/phonpic" />

                <TextView
                    android:id="@+id/connect_us_fragment_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d8"
                    android:textColor="@color/reddarck"
                    android:textSize="@dimen/txt_30sp" />
            </LinearLayout>

            <ImageView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/text_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <ImageView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/connect_us_fragment_im_email"
                    android:layout_width="@dimen/d50"
                    android:layout_height="@dimen/d50"
                    android:layout_marginStart="@dimen/d8"
                    android:padding="@dimen/d4"
                    android:src="@drawable/emailpic" />

                <TextView
                    android:id="@+id/connect_us_fragment_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d8"
                    android:textColor="@color/reddarck"
                    android:textSize="@dimen/txt_30sp" />
            </LinearLayout>

            <ImageView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:columnCount="2">

                <ImageView
                    android:id="@+id/connect_us_fragment_img_facebook"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/d56"
                    android:layout_columnWeight="1"
                    android:src="@drawable/facebookpic" />

                <ImageView
                    android:id="@+id/connect_us_fragment_img_instgram"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/d56"
                    android:layout_columnWeight="1"
                    android:src="@drawable/instgrampic" />

                <ImageView
                    android:id="@+id/connect_us_fragment_img_twitter"
                    android:layout_height="@dimen/d56"
                    android:layout_columnWeight="1"
                    android:src="@drawable/twiterpic" />

                <ImageView
                    android:id="@+id/connect_us_fragment_img_youtube"
                    android:layout_height="@dimen/d56"
                    android:layout_columnWeight="1"
                    android:src="@drawable/youtubepic" />

            </GridLayout>

            <EditText
                android:id="@+id/connect_us_et_title"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/connect_us_et_massage"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d120"
                android:layout_marginTop="@dimen/d20"
                android:hint="massage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/donation_fragment_lnlay_view"
                android:layout_margin="@dimen/d20"
                android:gravity="center">

                <Button
                    android:id="@+id/donation_fragment_bt_send"
                    android:layout_width="@dimen/d150"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shaprede"
                    android:text="@string/send"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>