<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_setting_notification_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d150"
                android:layout_margin="@dimen/d8"
                android:background="@drawable/shape_grey_shadow"
                android:gravity="center_horizontal"
                android:padding="@dimen/d12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d8"
                android:layout_marginTop="@dimen/d8"
                android:layout_marginEnd="@dimen/d8"
                android:background="@drawable/relative_rv_shap">

                <LinearLayout
                    android:id="@+id/fragment_setting_notification_ll_blood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/regtangle_shap"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fragment_setting_notification_im_add"
                        android:layout_width="@dimen/d30"
                        android:layout_height="@dimen/d30"
                        android:src="@drawable/ic_add_black_24dp"
                        android:padding="@dimen/d4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bloodtype"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_20sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_setting_notification_rv_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d150"
                    android:layout_below="@id/fragment_setting_notification_ll_blood"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d8"
                android:layout_marginTop="@dimen/d8"
                android:layout_marginEnd="@dimen/d8"
                android:background="@drawable/relative_rv_shap">

                <LinearLayout
                    android:id="@+id/fragment_setting_notification_ll_gover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/regtangle_shap"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fragment_setting_notification_im_add_gover"
                        android:layout_width="@dimen/d30"
                        android:layout_height="@dimen/d30"
                        android:src="@drawable/ic_add_black_24dp"
                        android:padding="@dimen/d4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/governorat"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_20sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_setting_notification_rv_gover"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d150"
                    android:layout_below="@id/fragment_setting_notification_ll_gover"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/d150"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/d16">

                <Button
                    android:id="@+id/register_fragment_bt_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/regtangle_shap"
                    android:text="@string/Sava" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>